nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.css
/*
 * Copyright (C) 2017 VSCT
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.paginator {
  height: 64px;
}

.header {
  display: inline-flex;
  float: left;
  background-color: white;
  padding-left: 8px;
  height: 56px;
}

.title {
  margin: auto;
  vertical-align: bottom;
}

.button {
  float: right;
  margin: auto;
}

.status {
  border-radius: 25px;
  padding: 8px;
}

.md-column-select {
  overflow: initial;
}

.mat-column-select {
  max-width: 48px;
}
.mat-column-currentIntent {
  max-width: 256px;
}
.mat-column-status {
  max-width: 128px;
}

